[package]
name = "eth"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.36", features = [ 
    "eips",
    "full",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm", 
] }
hex.workspace = true
tokio.workspace = true